new icon button

--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
 
         <!-- 選擇性佈景主題 -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap-theme.min.css">
-
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
         <!-- 最新編譯和最佳化的 JavaScript -->
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
 
@@ -51,8 +51,8 @@
                 <div class="container-fluid">
                     <div class="row">
                         <div id="header">
-                            <button class="btn set">≡</button>
-                            <button class="btn close">╳</button>
+                            <button class="btn set"><span class="glyphicon glyphicon-user" aria-hidden="true"></span></span></button>
+                            <button class="btn close"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span></button>
                             <h1 id="title">U-Chat</h1>
                             <select id = "userSelect" >
                                 <option value='all'>Public</option>
@@ -84,7 +84,7 @@
                             <button class="btn send">Send</button>
                         </div>
                         <div class="col-md-2 col-xs-3 col-sm-3" style="padding:0"> 
-                            <button class = "btn upload" >＋</button>
+                            <button class = "btn upload" ><span class="glyphicon glyphicon-camera" aria-hidden="true"></span></button>
                         </div>
                     </div>
                 </div>
